--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
+spring.data.mongodb.uri = mongodb+srv://brunopillare4:c5wbEXhmTt7c51qX@cluster0.sa6kvex.mongodb.net/<journaldb>?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database = journaldb
 spring.data.mongodb.auto-index-creation = true
 #spring.data.mongodb.username = myjournaluser
